added TokenModule, changed TeamModule and MailerService
