# src/modules/teams/dto/update-team-members.dto.ts
@@ -1,10 +1,10 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { Type } from 'class-transformer';
-import { IsArray, IsEnum, IsObject, ValidateNested } from 'class-validator';
+import { IsEnum, IsObject, ValidateNested } from 'class-validator';
 import { TeamAction } from '../types/team-action';
 import { TeamMemberDto } from './team-member.dto';
 
-class UpdateTeamMembersItemDto {
+export class UpdateTeamMembersDto {
   @ApiProperty({ description: 'Участник', type: TeamMemberDto })
   @IsObject()
   @ValidateNested()
@@ -14,12 +14,4 @@ class UpdateTeamMembersItemDto {
   @ApiProperty({ description: 'Действие', type: String, enum: TeamAction })
   @IsEnum(TeamAction)
   readonly action: TeamAction;
-}
-
-export class UpdateTeamMembersDto {
-  @ApiProperty({ description: 'Участники', type: [UpdateTeamMembersItemDto] })
-  @IsArray()
-  @ValidateNested({ each: true })
-  @Type(() => UpdateTeamMembersItemDto)
-  readonly members: UpdateTeamMembersItemDto[];
 }
